// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accordion > given the accordion in the default state > then it matches the snapshot 1`] = `
"<div style="
  animation-duration: 0ms;
  transition-delay: 0ms;
  transition-duration: 0ms
">
  <ul style="
    animation-duration: 0ms;
    margin-bottom: 0px;
    margin-top: 0px;
    padding-left: 0px;
    transition-delay: 0ms;
    transition-duration: 0ms;
    width: 100%
  ">
    <li style="
      animation-duration: 0ms;
      border-bottom: 1px solid var(--color-border-subtle);
      transition-delay: 0ms;
      transition-duration: 0ms
    ">
      <style>@scope{:scope{
        &::marker {font-size: 0px}
      }}</style>
      <details style="
        animation-duration: 0ms;
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0ms;
        transition-duration: 0ms
      ">
        <style>@scope{:scope{
          &::details-content {
            animation-duration: 0ms;
            opacity: 0;
            overflow-x: clip;
            overflow-y: clip;
            transition-delay: 0ms;
            transition-duration: 0ms;
            transition: height var(--motion-duration-medium-3) var(--motion-easing-standard),
                        content-visibility var(--motion-duration-medium-3)
                            var(--motion-easing-continuous) allow-discrete,
                        opacity var(--motion-duration-medium-2)
                            var(--motion-easing-continuous)
          }
          &::marker {font-size: 0px}
        }}</style>
        <summary style="
          align-items: center;
          animation-duration: 0ms;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-600);
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          position: relative;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::after {
              animation-duration: 0ms;
              background-color: var(--color-state-layer-neutral);
              bottom: 0px;
              content: "";
              left: 0px;
              pointer-events: none;
              position: absolute;
              right: 0px;
              top: 0px;
              transition-delay: 0ms;
              transition-duration: 0ms
            }
            &::marker {font-size: 0px}
          }}</style>
          <span style="
            animation-duration: 0ms;
            flex-basis: 0%;
            flex-grow: 1;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Item 1
          </span>
          <span
            hidden
            style="
              animation-duration: 0ms;
              display: inline-flex;
              transition-delay: 0ms;
              transition-duration: 0ms
            "
          >
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            <svg
              focusable="false"
              style="
                animation-duration: 0ms;
                display: inline-block;
                fill: var(--color-foreground-secondary);
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0ms;
                transition-duration: 0ms;
                vertical-align: middle;
                width: 16px
              "
            >
              <style>@scope{:scope{
                &::marker {font-size: 0px}
              }}</style>
              <use
                href="#icon-chevron-down-16"
                style="
                  animation-duration: 0ms;
                  transition-delay: 0ms;
                  transition-duration: 0ms
                "
              >
                <style>@scope{:scope{
                  &::marker {font-size: 0px}
                }}</style>
              </use>
            </svg>
          </span>
        </summary>
        <div style="
          animation-duration: 0ms;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-block-end: 6px;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::marker {font-size: 0px}
          }}</style>
          <p style="
            animation-duration: 0ms;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
    <li style="
      animation-duration: 0ms;
      border-bottom: 1px solid var(--color-border-subtle);
      transition-delay: 0ms;
      transition-duration: 0ms
    ">
      <style>@scope{:scope{
        &::marker {font-size: 0px}
      }}</style>
      <details style="
        animation-duration: 0ms;
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0ms;
        transition-duration: 0ms
      ">
        <style>@scope{:scope{
          &::details-content {
            animation-duration: 0ms;
            opacity: 0;
            overflow-x: clip;
            overflow-y: clip;
            transition-delay: 0ms;
            transition-duration: 0ms;
            transition: height var(--motion-duration-medium-3) var(--motion-easing-standard),
                        content-visibility var(--motion-duration-medium-3)
                            var(--motion-easing-continuous) allow-discrete,
                        opacity var(--motion-duration-medium-2)
                            var(--motion-easing-continuous)
          }
          &::marker {font-size: 0px}
        }}</style>
        <summary style="
          align-items: center;
          animation-duration: 0ms;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-600);
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          position: relative;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::after {
              animation-duration: 0ms;
              background-color: var(--color-state-layer-neutral);
              bottom: 0px;
              content: "";
              left: 0px;
              pointer-events: none;
              position: absolute;
              right: 0px;
              top: 0px;
              transition-delay: 0ms;
              transition-duration: 0ms
            }
            &::marker {font-size: 0px}
          }}</style>
          <span style="
            animation-duration: 0ms;
            flex-basis: 0%;
            flex-grow: 1;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Item 2
          </span>
          <span
            hidden
            style="
              animation-duration: 0ms;
              display: inline-flex;
              transition-delay: 0ms;
              transition-duration: 0ms
            "
          >
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            <svg
              focusable="false"
              style="
                animation-duration: 0ms;
                display: inline-block;
                fill: var(--color-foreground-secondary);
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0ms;
                transition-duration: 0ms;
                vertical-align: middle;
                width: 16px
              "
            >
              <style>@scope{:scope{
                &::marker {font-size: 0px}
              }}</style>
              <use
                href="#icon-chevron-down-16"
                style="
                  animation-duration: 0ms;
                  transition-delay: 0ms;
                  transition-duration: 0ms
                "
              >
                <style>@scope{:scope{
                  &::marker {font-size: 0px}
                }}</style>
              </use>
            </svg>
          </span>
        </summary>
        <div style="
          animation-duration: 0ms;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-block-end: 6px;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::marker {font-size: 0px}
          }}</style>
          <p style="
            animation-duration: 0ms;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
    <li style="
      animation-duration: 0ms;
      transition-delay: 0ms;
      transition-duration: 0ms
    ">
      <style>@scope{:scope{
        &::marker {font-size: 0px}
      }}</style>
      <details style="
        animation-duration: 0ms;
        overflow-x: hidden;
        overflow-y: hidden;
        transition-delay: 0ms;
        transition-duration: 0ms
      ">
        <style>@scope{:scope{
          &::details-content {
            animation-duration: 0ms;
            opacity: 0;
            overflow-x: clip;
            overflow-y: clip;
            transition-delay: 0ms;
            transition-duration: 0ms;
            transition: height var(--motion-duration-medium-3) var(--motion-easing-standard),
                        content-visibility var(--motion-duration-medium-3)
                            var(--motion-easing-continuous) allow-discrete,
                        opacity var(--motion-duration-medium-2)
                            var(--motion-easing-continuous)
          }
          &::marker {font-size: 0px}
        }}</style>
        <summary style="
          align-items: center;
          animation-duration: 0ms;
          box-sizing: border-box;
          color: var(
                  --details-summary-foreground-color,
                  var(--color-foreground-primary)
              );
          display: flex;
          font-size: var(--font-size-medium);
          font-weight: var(--font-weight-600);
          list-style-position: inside;
          list-style-type: none;
          min-height: 48px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-bottom: 12px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 12px;
          position: relative;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::after {
              animation-duration: 0ms;
              background-color: var(--color-state-layer-neutral);
              bottom: 0px;
              content: "";
              left: 0px;
              pointer-events: none;
              position: absolute;
              right: 0px;
              top: 0px;
              transition-delay: 0ms;
              transition-duration: 0ms
            }
            &::marker {font-size: 0px}
          }}</style>
          <span style="
            animation-duration: 0ms;
            flex-basis: 0%;
            flex-grow: 1;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Item 3
          </span>
          <span
            hidden
            style="
              animation-duration: 0ms;
              display: inline-flex;
              transition-delay: 0ms;
              transition-duration: 0ms
            "
          >
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            <svg
              focusable="false"
              style="
                animation-duration: 0ms;
                display: inline-block;
                fill: var(--color-foreground-secondary);
                height: 16px;
                pointer-events: none;
                stroke-width: 0;
                stroke: currentcolor;
                transition-delay: 0ms;
                transition-duration: 0ms;
                vertical-align: middle;
                width: 16px
              "
            >
              <style>@scope{:scope{
                &::marker {font-size: 0px}
              }}</style>
              <use
                href="#icon-chevron-down-16"
                style="
                  animation-duration: 0ms;
                  transition-delay: 0ms;
                  transition-duration: 0ms
                "
              >
                <style>@scope{:scope{
                  &::marker {font-size: 0px}
                }}</style>
              </use>
            </svg>
          </span>
        </summary>
        <div style="
          animation-duration: 0ms;
          margin-left: 16px;
          margin-right: 16px;
          overflow-x: hidden;
          overflow-y: hidden;
          padding-block-end: 6px;
          transition-delay: 0ms;
          transition-duration: 0ms
        ">
          <style>@scope{:scope{
            &::marker {font-size: 0px}
          }}</style>
          <p style="
            animation-duration: 0ms;
            transition-delay: 0ms;
            transition-duration: 0ms
          ">
            <style>@scope{:scope{
              &::marker {font-size: 0px}
            }}</style>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </details>
    </li>
  </ul>
</div>"
`;

exports[`accordion > given the accordion in the default state > when first section toggled > should open the clicked section 1`] = `
"@@ -21,17 +21,20 @@
       <style>@scope{:scope{
         &::marker {font-size: 0px}
       }}</style>
-       <details style="
-         animation-duration: 0ms;
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0ms;
-         transition-duration: 0ms
-       ">
+       <details
+         open
+         style="
+           animation-duration: 0ms;
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0ms;
+           transition-duration: 0ms
+         "
+       >
         <style>@scope{:scope{
           &::details-content {
             animation-duration: 0ms;
-             opacity: 0;
+             height: auto;
             overflow-x: clip;
             overflow-y: clip;
             transition-delay: 0ms;
@@ -71,7 +74,7 @@
           <style>@scope{:scope{
             &::after {
               animation-duration: 0ms;
-               background-color: var(--color-state-layer-neutral);
+               background-color: var(--color-state-layer-hover);
               bottom: 0px;
               content: "";
               left: 0px;
@@ -101,6 +104,7 @@
             style="
               animation-duration: 0ms;
               display: inline-flex;
+               transform: rotate(180deg);
               transition-delay: 0ms;
               transition-duration: 0ms
             "
@@ -112,8 +116,10 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
-                 fill: var(--color-foreground-secondary);
+                 fill: currentcolor;
                 height: 16px;
                 pointer-events: none;
                 stroke-width: 0;
@@ -268,6 +274,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
@@ -423,6 +431,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
"
`;

exports[`accordion > given the accordion in the default state > when first section toggled > when another section is opened > should close an open section when clicked again > Should have no changes from initial 1`] = `
"@@ -71,7 +71,7 @@
           <style>@scope{:scope{
             &::after {
               animation-duration: 0ms;
-               background-color: var(--color-state-layer-neutral);
+               background-color: var(--color-state-layer-hover);
               bottom: 0px;
               content: "";
               left: 0px;
@@ -112,6 +112,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
@@ -268,6 +270,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
@@ -423,6 +427,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
"
`;

exports[`accordion > given the accordion with autocollapse enabled > when first section toggled > should open as normal 1`] = `
"@@ -21,17 +21,20 @@
       <style>@scope{:scope{
         &::marker {font-size: 0px}
       }}</style>
-       <details style="
-         animation-duration: 0ms;
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0ms;
-         transition-duration: 0ms
-       ">
+       <details
+         open
+         style="
+           animation-duration: 0ms;
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0ms;
+           transition-duration: 0ms
+         "
+       >
         <style>@scope{:scope{
           &::details-content {
             animation-duration: 0ms;
-             opacity: 0;
+             height: auto;
             overflow-x: clip;
             overflow-y: clip;
             transition-delay: 0ms;
@@ -71,7 +74,7 @@
           <style>@scope{:scope{
             &::after {
               animation-duration: 0ms;
-               background-color: var(--color-state-layer-neutral);
+               background-color: var(--color-state-layer-hover);
               bottom: 0px;
               content: "";
               left: 0px;
@@ -101,6 +104,7 @@
             style="
               animation-duration: 0ms;
               display: inline-flex;
+               transform: rotate(180deg);
               transition-delay: 0ms;
               transition-duration: 0ms
             "
@@ -112,8 +116,10 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
-                 fill: var(--color-foreground-secondary);
+                 fill: currentcolor;
                 height: 16px;
                 pointer-events: none;
                 stroke-width: 0;
@@ -268,6 +274,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
@@ -423,6 +431,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
"
`;

exports[`accordion > given the accordion with autocollapse enabled > when first section toggled > when another section is opened > should collapse previous section when new section is opened 1`] = `
"@@ -71,7 +71,7 @@
           <style>@scope{:scope{
             &::after {
               animation-duration: 0ms;
-               background-color: var(--color-state-layer-neutral);
+               background-color: var(--color-state-layer-hover);
               bottom: 0px;
               content: "";
               left: 0px;
@@ -112,6 +112,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
@@ -177,17 +179,20 @@
       <style>@scope{:scope{
         &::marker {font-size: 0px}
       }}</style>
-       <details style="
-         animation-duration: 0ms;
-         overflow-x: hidden;
-         overflow-y: hidden;
-         transition-delay: 0ms;
-         transition-duration: 0ms
-       ">
+       <details
+         open
+         style="
+           animation-duration: 0ms;
+           overflow-x: hidden;
+           overflow-y: hidden;
+           transition-delay: 0ms;
+           transition-duration: 0ms
+         "
+       >
         <style>@scope{:scope{
           &::details-content {
             animation-duration: 0ms;
-             opacity: 0;
+             height: auto;
             overflow-x: clip;
             overflow-y: clip;
             transition-delay: 0ms;
@@ -257,6 +262,7 @@
             style="
               animation-duration: 0ms;
               display: inline-flex;
+               transform: rotate(180deg);
               transition-delay: 0ms;
               transition-duration: 0ms
             "
@@ -268,8 +274,10 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-open var(--motion-duration-medium-1)
+                         var(--motion-easing-standard) var(--motion-duration-short-1);
                 display: inline-block;
-                 fill: var(--color-foreground-secondary);
+                 fill: currentcolor;
                 height: 16px;
                 pointer-events: none;
                 stroke-width: 0;
@@ -423,6 +431,8 @@
               focusable="false"
               style="
                 animation-duration: 0ms;
+                 animation: chevron-bounce-close var(--motion-duration-medium-1)
+                         var(--motion-easing-standard);
                 display: inline-block;
                 fill: var(--color-foreground-secondary);
                 height: 16px;
"
`;
